--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -1,6 +1,3 @@
-//import React from "react"
-import { Link } from "gatsby"
-
 import Layout from "../components/layout"
 import Image from "../components/image"
 import SEO from "../components/seo";
@@ -10,7 +7,7 @@ import Projects from '../components/projects/ProjectsQuery';
 <Layout>
 <SEO title="Projects" />
 
-<div className='projects-section'>
+<div className='projects-section paper-dark'>
 
 # Projects
 
