Finished the education page and changed styling for projects, skills, and schools

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,7 +6,7 @@ import ProfileImg from '../images/profile.png';
 
 <Layout>
 <SEO title="About" />
-<div className='about-me-section paper-dark'>
+<div className='about-me-section paper-dark md-section'>
 
 # About Me
 
