--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -7,7 +7,7 @@ import Projects from '../components/projects/ProjectsQuery';
 <Layout>
 <SEO title="Projects" />
 
-<div className='projects-section paper-dark'>
+<div className='projects-section paper-dark md-section'>
 
 # Projects
 
