Finished the pages and markdown data

--- a/src/pages/work.mdx
+++ b/src/pages/work.mdx
@@ -1,6 +1,19 @@
 import Layout from '../components/layout'
-import SEO from '../components/SEO'
+import SEO from '../components/SEO';
+import Work from '../components/work/WorkQuery';
 
 <Layout>
+
+<SEO title="Work" />
+
+<div className="work-section md-section paper-dark">
+
+# Work
+
+Here I will list jobs that I have worked at relating to software development or using skills that relate to my degree in Computer Science. I am still relatively new to working in this field, but am looking forward to finding a place I can plant my feet in and grow. I am always open to working at a place that will challenge me and keep me busy. Knowledge, challenges, and a pleasant work environment are two very important things I look for. For a complete job history, I have provided a link to my LinkedIn profile in footer of this site. A resume may also be provided upon request. 
+
+</div>
+
+<Work />
 
 </Layout>
